Dropped print() calls in template in favor of templating engine.

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -6,199 +6,130 @@
 <section>
     
 <header>
-    <h2><?js
-        if (doc.ancestors && doc.ancestors.length) {
-            print('<span class="ancestors">');
-            print( doc.ancestors.join('') ); 
-            print('</span>' + doc.name);
-        }
-        else {
-            print(doc.name)
-        }
-        
-        if (doc.variation) {
-            print('<sup class="variation">'+doc.variation+'</sup>'); 
-        }
-        
-        ?></h2>
-    <?js
-        if (doc.classdesc) {
-            print('<p class="class-description">'+doc.classdesc+'</p>'); 
-        }
-    ?>
+    <h2><?js if (doc.ancestors && doc.ancestors.length) { ?>
+        <span class="ancestors"><?js= doc.ancestors.join('') ?></span>
+    <?js } ?>
+    <?js= doc.name ?>
+    <?js if (doc.variation) { ?>
+        <sup class="variation"><?js= doc.variation ?></sup>
+    <?js } ?></h2>
+    <?js if (doc.classdesc) { ?>
+        <p class="class-description"><?js= doc.classdesc ?></p>
+    <?js } ?>
 </header>  
 
 <article>
     <div class="container-overview">
-    <?js
-    if (doc.kind === 'module' && doc.module) {
-        print(self.partial('method.tmpl', doc.module));
-    }
+    <?js if (doc.kind === 'module' && doc.module) { ?>
+        <?js= self.partial('method.tmpl', doc.module) ?>
+    <?js } ?>
     
-    if (doc.kind === 'class') {
-        print(self.partial('method.tmpl', doc));
-    }
-    else {
-        if (doc.description) {
-            print('<p class="description">' + doc.description + '</p>');
-        }
+    <?js if (doc.kind === 'class') { ?>
+        <?js= self.partial('method.tmpl', doc) ?>
+    <?js } else { ?>
+        <?js if (doc.description) { ?>
+            <p class="description"><?js= doc.description ?></p>
+        <?js } ?>
         
-        print(self.partial('details.tmpl', doc));
+        <?js= self.partial('details.tmpl', doc) ?>
         
-        if (doc.examples && doc.examples.length) {
-            print('<h3>Example' + (doc.examples.length > 1? 's':'') + '</h3>');
-            print( self.partial('examples.tmpl', doc.examples) );
-        }
-    }
-    ?>
+        <?js if (doc.examples && doc.examples.length) { ?>
+            <h3>Example<?js= doc.examples.length > 1? 's':'' ?></h3>
+            <?js= self.partial('examples.tmpl', doc.examples) ?>
+        <?js } ?>
+    <?js } ?>
     </div>
     
-    <?js
-        if (doc.augments && doc.augments.length) { 
-    ?>
+    <?js if (doc.augments && doc.augments.length) { ?>
         <h3 class="subsection-title">Extends</h3>
         
-        <ul><?js
-            doc.augments.forEach(function(a) {
-        ?>
+        <ul><?js doc.augments.forEach(function(a) { ?>
             <li><?js= self.linkto(a, a) ?></li>
-        <?js
-            });
-        ?></ul>
-    <?js 
-        }
-    ?>
+        <?js }); ?></ul>
+    <?js } ?>
     
-    <?js
-        if (doc.mixes && doc.mixes.length) { 
-    ?>
+    <?js if (doc.mixes && doc.mixes.length) { ?>
         <h3 class="subsection-title">Mixes In</h3>
         
-        <ul><?js
-            doc.mixes.forEach(function(a) {
-        ?>
+        <ul><?js doc.mixes.forEach(function(a) { ?>
             <li><?js= self.linkto(a, a) ?></li>
-        <?js
-            });
-        ?></ul>
-    <?js 
-        }
-    ?>
+        <?js }); ?></ul>
+    <?js } ?>
     
-    <?js
-        if (doc.requires && doc.requires.length) { 
-    ?>
+    <?js if (doc.requires && doc.requires.length) { ?>
         <h3 class="subsection-title">Requires</h3>
         
-        <ul><?js
-            doc.requires.forEach(function(r) {
-        ?>
+        <ul><?js doc.requires.forEach(function(r) { ?>
             <li><?js= self.linkto(r, r) ?></li>
-        <?js
-            });
-        ?></ul>
-    <?js 
-        }  
-    ?>
+        <?js }); ?></ul>
+    <?js } ?>
     
     <?js
         var classes = self.find({kind: 'class', memberof: doc.longname}); 
         if (doc.kind !== 'globalobj' && classes && classes.length) { 
     ?>
-        
         <h3 class="subsection-title">Classes</h3>
         
-        <dl><?js
-            classes.forEach(function(c) {
-        ?>
+        <dl><?js classes.forEach(function(c) { ?>
             <dt><?js= self.linkto(c.longname, c.name) ?></dt>
-            <dd><?js if (c.summary) print(c.summary); ?></dd>
-        <?js
-            });
-        ?></dl>
-        
+            <dd><?js if (c.summary) { ?><?js= c.summary ?><?js } ?></dd>
+        <?js }); ?></dl>
     <?js } ?>
     
     <?js
         var namespaces = self.find({kind: 'namespace', memberof: doc.longname}); 
         if (doc.kind !== 'globalobj' && namespaces && namespaces.length) { 
     ?>
-        
         <h3 class="subsection-title">Namespaces</h3>
         
-        <dl><?js
-            namespaces.forEach(function(n) {
-        ?>
+        <dl><?js namespaces.forEach(function(n) { ?>
             <dt><a href="namespaces.html#<?js= n.longname ?>"><?js= self.linkto(n.longname, n.name) ?></a></dt>
-            <dd><?js if (n.summary) print(n.summary); ?></dd>
-        <?js
-            });
-        ?></dl>
-        
+            <dd><?js if (n.summary) { ?><?js= n.summary ?><?js } ?></dd>
+        <?js }); ?></dl>
     <?js } ?>
     
     <?js
-        var members = self.find({kind: 'member', memberof: doc.longname});
-        if (title === 'Globals') {
-            members = self.find({kind: 'member', memberof: {isUndefined: true}});
-        }
+        var members = self.find({kind: 'member', memberof: title === 'Globals'? {isUndefined: true} : doc.longname});
         if (members && members.length && members.forEach) { 
     ?>
-        
         <h3 class="subsection-title">Members</h3>
         
-        <dl><?js
-            members.forEach(function(p) {
-                print(self.partial('members.tmpl', p));
-            });
-        ?></dl>
-        
+        <dl><?js members.forEach(function(p) { ?>
+            <?js= self.partial('members.tmpl', p) ?>
+        <?js }); ?></dl>
     <?js } ?>
     
     <?js
-        var methods = self.find({kind: 'function', memberof: doc.longname});
-        if (title === 'Globals') {
-            methods = self.find({kind: 'function', memberof: {isUndefined: true}});
-        }
+        var methods = self.find({kind: 'function', memberof: title === 'Globals'? {isUndefined: true} : doc.longname});
         if (methods && methods.length && methods.forEach) { 
     ?>
-        
         <h3 class="subsection-title">Methods</h3>
         
-        <dl><?js
-            methods.forEach(function(m) {
-                print(self.partial('method.tmpl', m));
-            });
-        ?></dl>
-        
+        <dl><?js methods.forEach(function(m) { ?>
+            <?js= self.partial('method.tmpl', m) ?>
+        <?js }); ?></dl>
     <?js } ?>
     
     <?js
         var typedefs = self.find({kind: 'typedef', memberof: doc.longname}); 
         if (typedefs && typedefs.length && typedefs.forEach) { 
     ?>
-        
         <h3 class="subsection-title">TypeDefs</h3>
         
-        <dl><?js
-            typedefs.forEach(function(e) {
-                print(self.partial('members.tmpl', e));
-            });
-        ?></dl>
+        <dl><?js typedefs.forEach(function(e) { ?>
+            <?js= self.partial('members.tmpl', e) ?>
+        <?js }); ?></dl>
     <?js } ?>
     
     <?js
         var events = self.find({kind: 'event', memberof: doc.longname}); 
         if (events && events.length && events.forEach) { 
     ?>
-        
         <h3 class="subsection-title">Events</h3>
         
-        <dl><?js
-            events.forEach(function(e) {
-                print(self.partial('method.tmpl', e));
-            });
-        ?></dl>
+        <dl><?js events.forEach(function(e) { ?>
+            <?js= self.partial('method.tmpl', e) ?>
+        <?js }); ?></dl>
     <?js } ?>
 </article>
 
