--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -7,9 +7,7 @@
         
         <h5 class="subsection-title">Properties:</h5>
         
-        <dl><?js
-            print( this.partial('properties.tmpl', properties) );
-        ?></dl>
+        <dl><?js= this.partial('properties.tmpl', properties) ?></dl>
         
     <?js } ?>
         
@@ -24,21 +22,18 @@
 	<?js } ?>
 	
 	<?js if (data.deprecated) { ?>
-        <dt class="important tag-deprecated">Deprecated<?js
-            if (data.deprecated === true) print('</dt><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd>');
-            else print(':</dt><dd><ul class="dummy"><li>'+data.deprecated+'</li><ul></dd>');
+        <dt class="important tag-deprecated">Deprecated:</dt><?js
+            if (data.deprecated === true) { ?><dd class="yes-def tag-deprecated"><ul class="dummy"><li>Yes</li></ul></dd><?js }
+            else { ?><dd><ul class="dummy"><li><?js= data.deprecated ?></li><ul></dd><?js }
         ?>
-        
-        <?js } ?>
+    <?js } ?>
 	
 	<?js if (data.author && author.length) {?>
 	<dt class="tag-author">Author:</dt>
 	<dd class="tag-author">
-        <ul><?js
-            author.forEach(function(a) {
-                print('<li>'+a+'</li>');
-            });
-        ?></ul>
+        <ul><?js author.forEach(function(a) { ?>
+            <li><?js= a ?></li>
+        <?js }); ?></ul>
 	</dd>
 	<?js } ?>
 	
@@ -65,33 +60,27 @@
     <?js if (data.tutorials && tutorials.length) {?>
     <dt class="tag-tutorial">Tutorials:</dt>
     <dd class="tag-tutorial">
-        <ul><?js
-            tutorials.forEach(function(t) {
-                print('<li>'+self.tutoriallink(t)+'</li>');
-            });
-        ?></ul>
+        <ul><?js tutorials.forEach(function(t) { ?>
+            <li><?js= tutoriallink(t) ?></li>
+        <?js }); ?></ul>
     </dd>
     <?js } ?>
 	
 	<?js if (data.see && see.length) {?>
 	<dt class="tag-see">See:</dt>
 	<dd class="tag-see">
-        <ul><?js
-            see.forEach(function(s) {
-                print('<li>'+self.linkto(s)+'</li>');
-            });
-        ?></ul>
+        <ul><?js see.forEach(function(s) { ?>
+            <li><?js= self.linkto(s) ?></li>
+        <?js }); ?></ul>
 	</dd>
 	<?js } ?>
 	
 	<?js if (data.todo && todo.length) {?>
 	<dt class="tag-todo">To Do:</dt>
 	<dd class="tag-todo">
-        <ul><?js
-            todo.forEach(function(t) {
-                print('<li>'+t+'</li>');
-            });
-        ?></ul>
+        <ul><?js todo.forEach(function(t) { ?>
+            <li><?js= t ?></li>
+        <?js }); ?></ul>
 	</dd>
 	<?js } ?>
 </dl>
