--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -14,60 +14,51 @@
     </p>
     <?js } ?>
     
-    <?js
-    if (data['this']) {
-        print('<h5>This:</h5>');
-        print( '<ul><li>'+this.linkto(data['this'], data['this'])+'</li></ul>' );
-    }
-    ?>
+    <?js if (data['this']) { ?>
+        <h5>This:</h5>
+        <ul><li><?js= this.linkto(data['this'], data['this']) ?></li></ul>
+    <?js } ?>
     
-    <?js
-    if (data.params && params.length) {
-        print('<h5>Parameters:</h5>');
-        print( this.partial('params.tmpl', params) );
-    }
-    ?>
+    <?js if (data.params && params.length) { ?>
+        <h5>Parameters:</h5>
+        <?js= this.partial('params.tmpl', params) ?>
+    <?js } ?>
     
     <?js= this.partial('details.tmpl', data) ?>
     
     <?js if (data.fires && fires.length) { ?>
     <h5>Fires:</h5>
-    <ul><?js
-        fires.forEach(function(f) {
-            print( self.partial('fires.tmpl', self.linkto(f) ) );
-        });
-    ?></ul>
+    <ul><?js fires.forEach(function(f) { ?>
+        <?js= self.partial('fires.tmpl', self.linkto(f) ) ?>
+    <?js }); ?></ul>
     <?js } ?>
     
     <?js if (data.exceptions && exceptions.length) { ?>
     <h5>Throws:</h5>
     <?js if (exceptions.length > 1) { ?><ul><?js
-        exceptions.forEach(function(r) {
-            print( '<li>' + self.partial('exceptions.tmpl', r) + '</li>' );
-        });
+        exceptions.forEach(function(r) { ?>
+            <li><?js= self.partial('exceptions.tmpl', r) ?></li>
+        <?js });
     ?></ul><?js } else {
-        exceptions.forEach(function(r) {
-            print( self.partial('exceptions.tmpl', r) );
-        });
+        exceptions.forEach(function(r) { ?>
+            <?js= self.partial('exceptions.tmpl', r) ?>
+        <?js });
     } } ?>
     
     <?js if (data.returns && returns.length) { ?>
     <h5>Returns:</h5>
     <?js if (returns.length > 1) { ?><ul><?js
-        returns.forEach(function(r) {
-            print( '<li>' + self.partial('returns.tmpl', r) + '</li>' );
-        });
+        returns.forEach(function(r) { ?>
+            <li><?js= self.partial('returns.tmpl', r) ?></li>
+        <?js });
     ?></ul><?js } else {
-        returns.forEach(function(r) {
-            print( self.partial('returns.tmpl', r) );
-        });
+        returns.forEach(function(r) { ?>
+            <?js= self.partial('returns.tmpl', r) ?>
+        <?js });
     } } ?>
     
-    <?js
-    if (data.examples && examples.length) {
-        print('<h5>Example' + (examples.length > 1? 's':'') + '</h5>');
-        print( this.partial('examples.tmpl', examples) );
-    }
-    ?>
-
+    <?js if (data.examples && examples.length) { ?>
+        <h5>Example<?js= examples.length > 1? 's':'' ?></h5>
+        <?js= this.partial('examples.tmpl', examples) ?>
+    <?js } ?>
 </dd>
