--- a/templates/default/tmpl/params.tmpl
+++ b/templates/default/tmpl/params.tmpl
@@ -74,41 +74,38 @@
             <td class="type">
             <?js
                 if (param.type && param.type.names) {
-                    param.type.names.forEach(function(name, i) {
-                        print( self.linkto(name, self.htmlsafe(name)) );
-                        if (i < param.type.names.length-1) { print(' | '); }
-                    }); 
+                    param.type.names.forEach(function(name, i) { ?>
+                        <?js= self.linkto(name, self.htmlsafe(name)) ?>
+                        <?js if (i < param.type.names.length-1) { ?> | <?js } ?>
+                    <?js }); 
                 }
             ?>
             </td>
             
             <?js if (params.hasAttributes) {?>
                 <td class="attributes">
-                <?js
-                    if (param.optional) {
-                        print( '&lt;optional><br>' );
-                    }
+                <?js if (param.optional) { ?>
+                    &lt;optional><br>
+                <?js } ?>
                     
-                    if (param.nullable) {
-                        print( '&lt;nullable><br>' );
-                    }
-                ?>
+                <?js if (param.nullable) { ?>
+                    &lt;nullable><br>
+                <?js } ?>
                 </td>
             <?js } ?>
             
             <?js if (params.hasDefault) {?>
                 <td class="default">
-                <?js
-                    if (typeof param.defaultvalue !== 'undefined') {
-                        print( self.htmlsafe(param.defaultvalue) );
-                    }
-                ?>
+                <?js if (typeof param.defaultvalue !== 'undefined') { ?>
+                    <?js= self.htmlsafe(param.defaultvalue) ?>
+                <?js } ?>
                 </td>
             <?js } ?>
             
-            <td class="description last"><?js= param.description ?><?js if (param.subparams) {
-                print( '<h6>Properties</h6>' + selfpartial('params.tmpl', param.subparams) );
-            }?></td>
+            <td class="description last"><?js= param.description ?><?js if (param.subparams) { ?>
+                <h6>Properties</h6>
+                <?js= self.partial('params.tmpl', param.subparams) ?>
+            <?js } ?></td>
         </tr>
 	
 	<?js }); ?>
