--- a/templates/default/tmpl/returns.tmpl
+++ b/templates/default/tmpl/returns.tmpl
@@ -16,12 +16,9 @@
 	<dd>
 		<?js
             var self = this;
-			names.forEach(function(name, i) {
-		?>
-		<span class="param-type"><?js= self.htmlsafe(name) ?></span> <?js if (i < names.length-1) print('|'); ?>
-		<?js
-			});
-		?>
+			names.forEach(function(name, i) { ?>
+		<span class="param-type"><?js= self.htmlsafe(name) ?></span> <?js if (i < names.length-1) { ?>|<?js } ?>
+		<?js }); ?>
 	</dd>
 </dl>
 <?js 
