--- a/templates/default/tmpl/examples.tmpl
+++ b/templates/default/tmpl/examples.tmpl
@@ -4,7 +4,7 @@
     ?>
         <p class="code-caption"><?js= example.caption ?></p>
     <?js } ?>
-    <pre class="sh_javascript"><code><?js= example.code ?></code></pre>
+    <pre class="code brush: js"><?js= example.code ?></pre>
 <?js
     });
 ?>
