--- a/templates/default/tmpl/returns.tmpl
+++ b/templates/default/tmpl/returns.tmpl
@@ -1,27 +1,11 @@
 <?js if (data.description) { ?>
 <div class="param-desc">
-    <?js= description ?>
-</div>
-<?js } ?>
-
-<?js
-	if (data.type) {
-		with(type) {
-?>
-
-<dl>
-	<dt>
-		Type
-	</dt>
-	<dd>
-		<?js
+	<?js if (data.type) { with(type) {?>
+	<?js
             var self = this;
 			names.forEach(function(name, i) { ?>
 		<span class="param-type"><?js= self.htmlsafe(name) ?></span> <?js if (i < names.length-1) { ?>|<?js } ?>
 		<?js }); ?>
-	</dd>
-</dl>
-<?js 
-		}
-	}
-?>
+		<?js } } ?> <?js= description ?>
+</div>
+<?js } ?>
