--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -1,20 +1,34 @@
 body
 {
-	font: 14px "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
-	line-height: 130%;
+	font-size: 0.75em;
+	font-family: Arial, Geneva, sans serif;
+	padding: 15px 0;
 	color: #000;
+	background: #EEE;
+	background-image: -moz-linear-gradient(left, #dddddd, #f9f9f9) fixed;
+	background-image: -webkit-gradient(linear,left bottom,right bottom,color-stop(0, #dddddd),color-stop(1, #f9f9f9)) fixed;
+}
+
+div.hr {
+	margin: 10px 40px 10px 0px;
+	height: 1px;
+	color: #DADADA;
+	background-color: #DADADA;
 }
 
 a {
-    color: #444;
+    color: #0053CF;
 }
-
+a:link,
+a:active,
 a:visited {
-    color: #444;
+    color: #0053CF;
 }
 
-a:active {
-    color: #444;
+a:hover,
+a:focus {
+	color: ##004AB8;
+	text-decoration: none;
 }
 
 header
@@ -32,17 +46,28 @@ header
 
 #main {
     float: left;
-    width: 100%;
+    width: 70%;
+	min-width: 300px;
+	max-width: 750px;
 }
 
 section
 {
 	display: block;
-	
-	background-color: #fff;
-	padding: 12px 24px;
     border-bottom: 1px solid #ccc;
-    margin-right: 240px;
+	position: relative;
+	left: 10px;
+	margin: 0 0 15px 10px;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	border-radius: 15px;
+  	padding: 15px 15px 15px 15px;
+	background-color: #FFFFFF;
+	background-color: rgba(255, 255, 255, 1.0);
+	-moz-box-shadow: 0px 0px 10px #B2CCF0;
+	-webkit-box-shadow: 0px 0px 10px #B2CCF0;
+	box-shadow: 0px 0px 10px #B2CCF0;
+   /* margin-right: 240px; */
 }
 
 .variation {
@@ -56,6 +81,90 @@ section
 	font-style: italic;
 	font-weight: lighter;
 }
+/* Start menu */
+div.menu
+{
+	margin: 0 15px 0 -15px;
+	-moz-border-radius-bottomright: 15px;
+	-webkit-border-bottom-right-radius: 15px;
+	-border-bottom-right-radius: 15px;
+  	padding: 15px 15px 15px 30px;
+	-moz-box-shadow: 0px 0px 10px #B2CCF0;
+	-webkit-box-shadow: 0px 0px 10px #B2CCF0;
+	box-shadow: 0px 0px 10px #B2CCF0;
+	background-color: rgba(255, 255, 255, 1.0);
+}
+
+div.nav 
+{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	float: left;
+	width: 30%;
+	min-width: 100px;
+	max-width: 300px;
+	padding: 0 0 10px 0;
+	height: 98%;
+	overflow: auto;
+}
+
+div.indexTitle
+{
+	padding: 8px 0 0;
+	font-size: 200%;
+	font-weight: bold;
+	position: absolute;
+}
+
+div.nav div.divider
+{
+	margin-top: 3.0em;
+	margin-bottom: 0.5em;
+	border-bottom: 1px solid #999;
+	line-height: 1.3em;
+}
+
+form 
+{
+	display: block;
+}
+
+div.nav div.indexLinks a
+{
+	font-family: M1m, Arial, sans-serif;
+	font-size: 1.6em;
+	text-transform: lowercase;
+	margin-right: 2px;
+	margin-bottom: 0;
+	border-right: 1px solid #999;
+	padding-right: 4px;
+}
+
+div.nav div.indexLinks a:last-child
+{
+	margin-right: 2px;
+	border-right: 0px;
+	padding-right: 4px;
+}
+
+div.navStatic
+{
+	position: static;
+	min-height: 1em;
+}
+
+div.nav input.classFilter {
+	margin: 5px 10px 5px 0px; /*top, right, bottom, left*/
+	width: 90%;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #CCCCCC #999999 #999999 #CCCCCC;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-border-radius: 3px;
+}
+/* End menu */
 
 nav
 {
@@ -68,7 +177,7 @@ nav
     padding-left: 9px;
 }
 
-nav ul {
+div.nav ul {
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', arial, sans-serif;
     font-size: 100%;
     line-height: 17px;
@@ -77,12 +186,13 @@ nav ul {
     list-style-type:none;
 }
 
-nav h3 {
+div.nav h3 {
     margin-top: 12px;
 }
 
-nav li {
+div.nav li {
     margin-top: 6px;
+	list-style-type:none;
 }
 
 nav a {
@@ -105,12 +215,32 @@ footer {
     font-size: 90%;
 }
 
+.page-title
+{
+	font-size: 2em;
+	font-weight: bold;
+	letter-spacing: 2px;
+	line-height: 1em;
+	position: relative;
+	left: 10px;
+	margin: -30px 0 15px 10px;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	border-radius: 15px;
+  	padding: 25px 15px 15px 15px;
+	background-color: #FFFFFF;
+	background-color: rgba(255, 255, 255, 1.0);
+	-moz-box-shadow: 0px 0px 10px #B2CCF0;
+	-webkit-box-shadow: 0px 0px 10px #B2CCF0;
+	box-shadow: 0px 0px 10px #B2CCF0;
+}
+
 h1
 {
 	font-size: 200%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
-	margin: 6px 0 9px 0;
+	margin: 6px 0 10px 10px;
 }
 
 h2
@@ -123,16 +253,16 @@ h2
 
 h3
 {
-	font-size: 150%;
+	font-size: 200%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
-	margin-top: 16px;
+	margin-top: 20px;
 	margin: 6px 0 3px 0;
 }
 
 h4
 {
-	font-size: 130%;
+	font-size: 140%;
 	font-weight: bold;
 	letter-spacing: -0.01em;
 	margin-top: 16px;
@@ -187,6 +317,11 @@ h6
 .details ul { margin: 0; }
 .details ul { list-style-type: none; }
 .details li { margin-left: 30px; padding-top: 6px; }
+
+.see-list li{
+	margin: 0;
+	padding: 0;
+}
 
 .description { margin-left: -16px; }
 
