--- a/templates/default/tmpl/exceptions.tmpl
+++ b/templates/default/tmpl/exceptions.tmpl
@@ -1,21 +1,12 @@
 <?js if (data.description) { ?>
 <div class="param-desc">
-    <?js= description ?>
-</div>
-<?js } ?>
-
-<?js if (data.type && data.type.names) { ?>
-<dl>
-	<dt>
-		Type
-	</dt>
-	<dd>
+    <?js if (data.type && data.type.names) { ?>
 		<?js
 			var typeNames = data.type.names,
                 self = this;
 			typeNames.forEach(function(name, i) { ?>
 		<span class="param-type"><?js= self.linkto(name, self.htmlsafe(name)) ?></span> <?js if (i < typeNames.length-1) { ?>|<?js } ?>
 		<?js }); ?>
-	</dd>
-</dl>
+	<?js } ?>: <?js= description ?>
+</div>
 <?js } ?>
