--- a/templates/default/tmpl/members.tmpl
+++ b/templates/default/tmpl/members.tmpl
@@ -12,11 +12,12 @@
         <?js= data.description ?>
     </p>
     <?js } ?>
-    
-    <?js= this.partial('details.tmpl', data) ?>
-    
+        
     <?js if (data.examples && examples.length) { ?>
         <h5>Example<?js= examples.length > 1? 's':'' ?></h5>
         <?js= this.partial('examples.tmpl', examples) ?>
     <?js } ?>
+	
+	<?js= this.partial('details.tmpl', data) ?>
+	<div class="hr"></div>
 </dd>
