--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -21,9 +21,16 @@
 
 <div class="nav">
 	<div class="menu">
-		<div class="indexTitle">Geoscope Doc</div>
+		
+		<div class="indexLinks">
+			<a id="allLink">all</a>
+			<a id="jsIndexLink">js</a>
+			<a id="glslIndexLink">glsl</a>
+		</div>
 		<div class="divider"></div>
-		<input type="text" name="classFilter" class="classFilter" id="ClassFilter" placeholder="Filter"></input>
+		<form name="filterForm" method="get">
+			<input type="text" name="classFilter" class="classFilter" id="ClassFilter" placeholder="Filter"></input>
+		</form>
 		<?js= this.nav ?>
 	</div>
 </div>
@@ -47,7 +54,7 @@
 	var searchTerm = ((window.location.search).split('='))[1];
 	if(searchTerm){
 		var numDocLinks = document.links.length;
-		for (i = 3; i < numDocLinks; i++) {
+		for (i = 0; i < numDocLinks; i++) {
 			var currentLink = document.links[i];
 			var anchorIndex = currentLink.href.indexOf('#');
 			if(anchorIndex !== -1) {
@@ -65,5 +72,6 @@
 	
 	SyntaxHighlighter.all();
 </script>
+<script src="javascript/indexLinks.js"></script>
 </body>
 </html>
