Explicitly set background to white and scroll bars to auto.
When displaying documentation pages inside of the Spotify client
without this change, the pages have the wrong background color and
aren't scrollable.

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -1,8 +1,15 @@
+html
+{
+    overflow: auto;
+    background-color: #fff;
+}
+
 body
 {
 	font: 14px "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans serif;
 	line-height: 130%;
 	color: #000;
+	background-color: #fff;
 }
 
 a {
