--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -9,9 +9,9 @@
 <dd>
     
     <?js if (data.description) { ?>
-    <p class="description">
+    <div class="description">
         <?js= data.description ?>
-    </p>
+    </div>
     <?js } ?>
     
     <?js if (data['this']) { ?>
