--- a/templates/default/tmpl/members.tmpl
+++ b/templates/default/tmpl/members.tmpl
@@ -8,9 +8,9 @@
 </dt>
 <dd>
     <?js if (data.description) { ?>
-    <p class="description">
+    <div class="description">
         <?js= data.description ?>
-    </p>
+    </div>
     <?js } ?>
     
     <?js= this.partial('details.tmpl', data) ?>
