Changes to default template to support index page [submitted by reklis (Steven Fusco)].

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -3,6 +3,12 @@
     docs.forEach(function(doc, i) {
 ?>
 
+<?js if (doc.kind === 'mainpage') { ?>
+	
+	<?js= self.partial('mainpage.tmpl', doc) ?>
+
+<?js } else { ?>
+
 <section>
     
 <header>
@@ -134,4 +140,6 @@
 </article>
 
 </section>  
+<?js } ?>
+
 <?js }); ?>
