Updated version from alpha to final candidate, authors and contributers added to the Jake template.

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -13,10 +13,10 @@
 	"repositories": [
 		{
 			"type": "git",
-			"url":  "git://github.com/micmath/jsdoc.git"
+			"url":  "https://github.com/jsdoc3/jsdoc"
 		}
 	],
-	"bugs": "https://github.com/micmath/jsdoc/issues",
+	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
         {
 			"name":  "Michael Mathews",
@@ -25,12 +25,20 @@
         {
 			"name":  "Rafa\u0105 Wrzeszcz",
 			"email": "rafal.wrzeszcz@wrzasq.pl"
-		}
+		},
+        {
+            "name": "Jannon Frank",
+            "email": "jannon@jannon.net"
+        }
     ],
 	"maintainers": [
 		{
 			"name":  "Michael Mathews",
 			"email": "micmath@gmail.com"
-		}
+		},
+        {
+            "name": "Jannon Frank",
+            "email": "jannon@jannon.net"
+        }
     ]
 }
