Added support for including README.md content on the output index page. Closes #128

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -3,10 +3,8 @@
     docs.forEach(function(doc, i) {
 ?>
 
-<?js if (doc.kind === 'mainpage') { ?>
-	
-	<?js= self.partial('mainpage.tmpl', doc) ?>
-
+<?js if (doc.kind === 'mainpage' || (doc.kind === 'package')) { ?>
+    <?js= self.partial('mainpage.tmpl', doc) ?>
 <?js } else { ?>
 
 <section>
