--- a/templates/default/tmpl/mainpage.tmpl
+++ b/templates/default/tmpl/mainpage.tmpl
@@ -1,3 +1,13 @@
 <?js
 var self = this;
 ?>
+
+<?js if (data.kind === 'package') { ?>
+    <h3><?js= data.name ?> <?js= data.version ?></h3>
+<?js } ?>
+
+<?js if (data.readme) { ?>
+    <section>
+        <article><?js= data.readme ?></article>
+    </section>
+<?js } ?>
