refactor default template and templateHelper.js (#186)

--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -68,7 +68,7 @@
     <dt class="tag-tutorial">Tutorials:</dt>
     <dd class="tag-tutorial">
         <ul><?js tutorials.forEach(function(t) { ?>
-            <li><?js= tutoriallink(t) ?></li>
+            <li><?js= self.tutoriallink(t) ?></li>
         <?js }); ?></ul>
     </dd>
     <?js } ?>
