show type of events; link to type of return values (#192)

--- a/templates/default/tmpl/exceptions.tmpl
+++ b/templates/default/tmpl/exceptions.tmpl
@@ -4,18 +4,13 @@
 </div>
 <?js } ?>
 
-<?js if (data.type && data.type.names) { ?>
+<?js if (data.type) {?>
 <dl>
 	<dt>
 		Type
 	</dt>
 	<dd>
-		<?js
-			var typeNames = data.type.names,
-                self = this;
-			typeNames.forEach(function(name, i) { ?>
-		<span class="param-type"><?js= self.linkto(name, self.htmlsafe(name)) ?></span> <?js if (i < typeNames.length-1) { ?>|<?js } ?>
-		<?js }); ?>
+		<?js= self.partial('type.tmpl', data.type) ?>
 	</dd>
 </dl>
 <?js } ?>
