--- a/templates/default/tmpl/params.tmpl
+++ b/templates/default/tmpl/params.tmpl
@@ -72,14 +72,9 @@
             <?js } ?>
             
             <td class="type">
-            <?js
-                if (param.type && param.type.names) {
-                    param.type.names.forEach(function(name, i) { ?>
-                        <?js= self.linkto(name, self.htmlsafe(name)) ?>
-                        <?js if (i < param.type.names.length-1) { ?> | <?js } ?>
-                    <?js }); 
-                }
-            ?>
+            <?js if (param.type) {?>
+                <?js= self.partial('type.tmpl', param.type) ?>
+            <?js } ?>
             </td>
             
             <?js if (params.hasAttributes) {?>
