--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -14,11 +14,11 @@
     </div>
     <?js } ?>
 
-    <?js if (kind === 'event' && data.type) {?>
+    <?js if (kind === 'event' && data.type && data.type.names) {?>
         <h5>Type:</h5>
         <ul>
             <li>
-                <?js= self.partial('type.tmpl', data.type) ?>
+                <?js= self.partial('type.tmpl', data.type.names) ?>
             </li>
         </ul>
     <?js } ?>
