--- a/templates/default/tmpl/properties.tmpl
+++ b/templates/default/tmpl/properties.tmpl
@@ -72,8 +72,8 @@
             <?js } ?>
             
             <td class="type">
-            <?js if (prop.type) {?>
-                <?js= self.partial('type.tmpl', prop.type) ?>
+            <?js if (prop.type && prop.type.names) {?>
+                <?js= self.partial('type.tmpl', prop.type.names) ?>
             <?js } ?>
             </td>
             
