fix error in exceptions template (#199)

--- a/templates/default/tmpl/exceptions.tmpl
+++ b/templates/default/tmpl/exceptions.tmpl
@@ -10,7 +10,7 @@
 		Type
 	</dt>
 	<dd>
-		<?js= self.partial('type.tmpl', data.type.names) ?>
+		<?js= this.partial('type.tmpl', data.type.names) ?>
 	</dd>
 </dl>
 <?js } ?>
