update evilstreak markdown plugin; move to node_modules

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -16,6 +16,9 @@
 			"url":  "https://github.com/jsdoc3/jsdoc"
 		}
 	],
+	"dependencies": {
+		"markdown": "0.4.0"
+	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
         {
