update TaffyDB; move to node_modules

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -17,7 +17,8 @@
 		}
 	],
 	"dependencies": {
-		"markdown": "0.4.0"
+		"markdown": "0.4.0",
+		"taffydb": "git://github.com/hegemonic/taffydb.git"
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
