--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -18,31 +18,36 @@
 	],
 	"dependencies": {
 		"markdown": "0.4.0",
-		"taffydb": "git://github.com/hegemonic/taffydb.git"
+		"taffydb":  "git://github.com/hegemonic/taffydb.git",
+		"wrench":   "1.3.9"
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
-        {
+		{
 			"name":  "Michael Mathews",
 			"email": "micmath@gmail.com"
 		},
-        {
+		{
 			"name":  "Rafa\u0105 Wrzeszcz",
 			"email": "rafal.wrzeszcz@wrzasq.pl"
 		},
-        {
-            "name": "Jannon Frank",
-            "email": "jannon@jannon.net"
-        }
-    ],
+		{
+			"name": "Jannon Frank",
+			"email": "jannon@jannon.net"
+		}
+	],
 	"maintainers": [
 		{
 			"name":  "Michael Mathews",
 			"email": "micmath@gmail.com"
 		},
-        {
-            "name": "Jannon Frank",
-            "email": "jannon@jannon.net"
-        }
-    ]
+		{
+			"name": "Jannon Frank",
+			"email": "jannon@jannon.net"
+		},
+		{
+			"name": "Jeff Williams",
+			"email": "jeffrey.l.williams@gmail.com"
+		}
+	]
 }
