--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -17,6 +17,7 @@
 		}
 	],
 	"dependencies": {
+		"js2xmlparser": "0.1.0",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
 		"wrench":   "1.3.9"
