update jshint module; move to node_modules

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -22,6 +22,9 @@
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
 		"wrench":   "1.3.9"
 	},
+	"devDependencies": {
+		"jshint": "0.9.1"
+	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"contributors" : [
 		{
