use underscore.js for templates instead of a customized subset

--- a/templates/default/tmpl/params.tmpl
+++ b/templates/default/tmpl/params.tmpl
@@ -1,5 +1,5 @@
 <?js
-    var params = data;
+    var params = obj;
     
     /* sort subparams under their parent params (like opts.classname) */
     var parentParam = null;
