--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -20,6 +20,7 @@
 		"js2xmlparser": "0.1.0",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
+		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
 	},
 	"devDependencies": {
