replace MD5 hash code

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -18,6 +18,7 @@
 	],
 	"dependencies": {
 		"js2xmlparser": "0.1.0",
+		"jsMD5": "git://github.com/hegemonic/jsMD5.git",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
 		"underscore": "1.4.2",
