replace GFM parser; package.json cleanup

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -17,6 +17,7 @@
 		}
 	],
 	"dependencies": {
+		"github-flavored-markdown": "git://github.com/hegemonic/github-flavored-markdown.git",
 		"js2xmlparser": "0.1.0",
 		"jsMD5": "git://github.com/hegemonic/jsMD5.git",
 		"markdown": "0.4.0",
@@ -28,11 +29,11 @@
 		"jshint": "0.9.1"
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
+	"author": {
+		"name":  "Michael Mathews",
+		"email": "micmath@gmail.com"
+	},
 	"contributors" : [
-		{
-			"name":  "Michael Mathews",
-			"email": "micmath@gmail.com"
-		},
 		{
 			"name":  "Rafa\u0105 Wrzeszcz",
 			"email": "rafal.wrzeszcz@wrzasq.pl"
@@ -43,10 +44,6 @@
 		}
 	],
 	"maintainers": [
-		{
-			"name":  "Michael Mathews",
-			"email": "micmath@gmail.com"
-		},
 		{
 			"name": "Jannon Frank",
 			"email": "jannon@jannon.net"
