move JSHint to regular dependencies list
Technically, JSHint is only a dev dependency. But if you run `npm
install --dev git://github.com/jsdoc3/jsdoc.git`, npm tries to install
approximately every npm package that has ever existed, including many
that require gcc compilation.

This approach seems like the sanest workaround.

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -19,14 +19,12 @@
 	"dependencies": {
 		"github-flavored-markdown": "git://github.com/hegemonic/github-flavored-markdown.git",
 		"js2xmlparser": "0.1.0",
+		"jshint": "0.9.1",
 		"jsMD5": "git://github.com/hegemonic/jsMD5.git",
 		"markdown": "0.4.0",
 		"taffydb":  "git://github.com/hegemonic/taffydb.git",
 		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
-	},
-	"devDependencies": {
-		"jshint": "0.9.1"
 	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"author": {
