--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -44,6 +44,13 @@ var self = this;
         <?js= self.partial('fires.tmpl', self.linkto(f) ) ?>
     <?js }); ?></ul>
     <?js } ?>
+
+    <?js if (data.listens && listens.length) { ?>
+    <h5>Listens to events:</h5>
+    <ul><?js listens.forEach(function(f) { ?>
+        <?js= self.partial('fires.tmpl', self.linkto(f) ) ?>
+    <?js }); ?></ul>
+    <?js } ?>
     
     <?js if (data.exceptions && exceptions.length) { ?>
     <h5>Throws:</h5>
