Added parameter inheritance functionality for constructors.
Included new tests, code now passes all tests.

--- a/templates/default/tmpl/params.tmpl
+++ b/templates/default/tmpl/params.tmpl
@@ -87,6 +87,10 @@
                     &lt;nullable><br>
                 <?js } ?>
                     
+                <?js if (param.inherited) { ?>
+                    &lt;inherited><br>
+                <?js } ?>
+
                 <?js if (param.variable) { ?>
                     &lt;repeatable><br>
                 <?js } ?>
