@inheritparams tag: fixed bugs and improved unit test
Deep clone of parameters ensures that original parameters aren't changed.
Template now displays 'attributes' in parameters if they are only inherited
and not also optional (etc). Fixed mistake in unit test, and expanded.
Tests all green.

--- a/templates/default/tmpl/params.tmpl
+++ b/templates/default/tmpl/params.tmpl
@@ -24,7 +24,7 @@
     params.forEach(function(param) {
         if (!param) { return; }
         
-        if (param.optional || param.nullable || param.variable) {
+        if (param.optional || param.nullable || param.variable || param.inherited) {
             params.hasAttributes = true;
         }
         
