hook up node visitors; gratuitous refactor of 'runtime' module (formerly 'vm'); move runtime-specific code
includes updated Rhino jar:
https://github.com/hegemonic/rhino/commit/b63c00d5

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -28,7 +28,7 @@
 		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
 	},
-	"bin": "./nodejs/bin/jsdoc",
+	"bin": "./node/bin/jsdoc",
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"author": {
 		"name":  "Michael Mathews",
