--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -69,9 +69,9 @@ section
 nav
 {
 	display: block;
-	float: left;
-    margin-left: -230px;
-    margin-top: 28px;
+	position : absolute;
+    right : 28px;
+    top: 28px;
     width: 220px;
     border-left: 1px solid #ccc;
     padding-left: 9px;
