--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -27,7 +27,9 @@
 		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
 	},
-	"bin": "./node/bin/jsdoc",
+	"bin": {
+		"jsdoc": "./jsdoc.js"
+	},
 	"bugs": "https://github.com/jsdoc3/jsdoc/issues",
 	"author": {
 		"name":  "Michael Mathews",
