--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -27,6 +27,12 @@
 		"underscore": "1.4.2",
 		"wrench":   "1.3.9"
 	},
+	"engines": {
+		"node": ">=0.10"
+	},
+	"scripts": {
+		"postinstall": "node ./node/postinstall.js"
+	},
 	"bin": {
 		"jsdoc": "./jsdoc.js"
 	},
