--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -25,7 +25,7 @@
 		"wrench":   "1.3.9"
 	},
 	"devDependencies": {
-		"jshint": "0.9.1",
+		"jshint": "0.9.1"
 	},
 	"engines": {
 		"node": ">=0.10"
