--- a/templates/default/tmpl/examples.tmpl
+++ b/templates/default/tmpl/examples.tmpl
@@ -1,11 +1,13 @@
 <?js
 	var data = obj;
+    var self = this;
+
     data.forEach(function(example) {
         if (example.caption) {
     ?>
         <p class="code-caption"><?js= example.caption ?></p>
     <?js } ?>
-    <pre class="prettyprint"><code><?js= example.code ?></code></pre>
+    <pre class="prettyprint"><code><?js= self.htmlsafe(example.code) ?></code></pre>
 <?js
     });
 ?>
