Show line numbers in source code.

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -239,12 +239,16 @@ h6
 	margin: 0;
 	background-color: #fff;
 	color: #000;
-	border-left: 3px #ddd solid;
 }
 
 .prettyprint code span.line
 {
   display: inline-block;
+}
+
+.prettyprint .linenums li
+{
+  border-left: 3px #ddd solid;
 }
 
 .params, .props
