Make anchors work again and highlight the anchored line.

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -251,6 +251,11 @@ h6
   border-left: 3px #ddd solid;
 }
 
+.prettyprint .linenums li.selected code
+{
+  background-color: lightyellow;
+}
+
 .params, .props
 {
 	border-spacing: 0;
