Fix for long numbers in line numbers column (up to 5 digits which should be enough).

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -256,6 +256,11 @@ h6
   background-color: lightyellow;
 }
 
+.prettyprint ol.linenums
+{
+  padding-left: 70px;
+}
+
 .params, .props
 {
 	border-spacing: 0;
