update JSON schema; validate doclets against schema (#327)

--- a/Jake/templates/package.json.tmpl
+++ b/Jake/templates/package.json.tmpl
@@ -25,7 +25,8 @@
 		"wrench":   "1.3.9"
 	},
 	"devDependencies": {
-		"jshint": "2.3.0"
+		"jshint": "2.3.0",
+		"tv4": "git+https://github.com/hegemonic/tv4.git#own-properties"
 	},
 	"engines": {
 		"node": ">=0.10"
