Remove margin in <p> tags in <td>s from markdown
Closes #550

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -317,6 +317,12 @@ h6
 .params th, .props th { border-right: 1px solid #aaa; }
 .params thead .last, .props thead .last { border-right: 1px solid #ddd; }
 
+.params td.description > p
+{
+    margin: 0;
+    padding: 0;
+}
+
 .disabled {
     color: #454545;
 }
