Revert "hide source location if outputSourceFiles is false (#571)"
Caused regression #592.

This reverts commit 8a50d1f064fc719e4099faf426d81e45690f07fd.

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -1,5 +1,4 @@
 <?js
-    var data = obj;
     var self = this;
     docs.forEach(function(doc, i) {
 ?>
@@ -38,7 +37,7 @@
             <div class="description"><?js= doc.description ?></div>
         <?js } ?>
         
-        <?js= self.partial('details.tmpl', { doc: doc, opts: data.opts }) ?>
+        <?js= self.partial('details.tmpl', doc) ?>
         
         <?js if (doc.examples && doc.examples.length) { ?>
             <h3>Example<?js= doc.examples.length > 1? 's':'' ?></h3>
